# usv-logger

./: .gitmodules  CMakeLists.txt  README.md  platformio.ini  sdkconfig.4d_systems_esp32s3_gen4_r8n16.old
components/gps_ublox/: CMakeLists.txt  library.properties
components/gps_ublox/src/: qqqlab_GPS_UBLOX.cpp  qqqlab_GPS_UBLOX.h
components/libnmea/: CMakeLists.txt  README.txt
components/ping-cpp/: CMakeLists.txt  README.txt
components/ping-cpp/src/: ping-parser.h
src/: CMakeLists.txt  aggregator.cpp  aggregator.h  app_main.cpp  config.cpp  config.h  gnss_task.cpp  gnss_task.h  hardware.h  lora_task.cpp  lora_task.h  ping-message.h  ping_task.cpp  ping_task.h  rn2483.cpp  rn2483.h  sd_task.cpp  sd_task.h  uart_manager.cpp  uart_manager.h
